fix padding in all blocks

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
           <div class="guest-main-text user-icon-block">Mrs. Kathryn Pena<img src="images/Group%201270.svg"/></div>
           <div class="guest-title-text">Passport Number: &ensp;<span class="guest-span-text">FJ714612</span></div>
           <div class="guest-title-text">Nationality: &ensp;<span class="guest-span-text">Ukraine</span></div>
-          <div class="guest-title-text">Flyer Program: &ensp;<br/><br/><span
+          <div class="guest-title-text fix-margin-btm">Flyer Program: &ensp;<br/><br/><span
             class="guest-span-text">7th Heaven rewards | WE223546</span></div>
         </div>
 
