--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <meta name="apple-mobile-web-app-title" content="Application Name">
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="format-detection" content="telephone=no">
+  <link rel="shortcut icon" href="./images/icons8.ico">
 
   <title>travel-order-page</title>
   <!--<link rel="stylesheet" href="css/styles.min.css">-->
