--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,8 @@
       <div class="user-info-block">
         <div class="user-icon-block"><span class="user-icon pink-bg">KP</span></div>
         <div class="guest-item">
-          <div class="guest-main-text user-icon-block">Mrs. Kathryn Pena<img src="images/Group%201270.svg"/></div>
+          <div class="guest-main-text user-icon-block">Mrs. Kathryn Pena<img alt="icon" src="images/Group%201270.svg"/>
+          </div>
           <div class="guest-title-text">Passport Number:&ensp;<span class="guest-span-text">FJ714612</span></div>
           <div class="guest-title-text">Nationality:&ensp;<span class="guest-span-text">Ukraine</span></div>
           <div class="guest-title-text fix-margin-btm">Flyer Program:&ensp;<br/><br/><span
